edit scroll bug

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="slide__movie__btns">
               <button class="btn btn--light"><i class="fas fa-play"></i>Watch
                 Trailer</button>
-              <a class='btn btn--dark' href="#"><i class="fas fa-plus"></i>Add To List</a>
+              <button class='btn btn--dark'><i class="fas fa-plus"></i>Add To List</button>
             </div>
             <div class="slide__movie__caption">
               <div class="slide__movie__tags">
@@ -85,7 +85,7 @@
             <div class="slide__movie__btns">
               <button class="btn btn--light"><i class="fas fa-play"></i>Watch
                 Trailer</button>
-              <a class="btn btn--dark" href="#"><i class="fas fa-plus"></i>Add To List</a>
+              <button class='btn btn--dark'><i class="fas fa-plus"></i>Add To List</button>
             </div>
             <div class="slide__movie__caption">
               <div class="slide__movie__tags">
@@ -110,7 +110,7 @@
             <div class="slide__movie__btns">
               <button class="btn btn--light"><i class="fas fa-play"></i>Watch
                 Trailer</button>
-              <a class='btn btn--dark' href="#"><i class="fas fa-plus"></i>Add To List</a>
+              <button class='btn btn--dark'><i class="fas fa-plus"></i>Add To List</button>
             </div>
             <div class="slide__movie__caption">
               <div class="slide__movie__tags">
